fix visual issues with popup cards, including the close icon which is now a svg. Also fixed content shifting that happens when scrollbars appear/disappear when either opening popup cards or shifting pages

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@
 # -------------------- 
 */
 
+html {
+    scrollbar-gutter: stable overlay;
+}
+
 body {
     /* font-family: "Lato", sans-serif; */
     font-family: 'Merriweather', Georgia, serif;
@@ -500,7 +504,7 @@ code {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     background: rgba(0, 0, 0, 0.2);
     z-index: 1000;
@@ -527,7 +531,7 @@ code {
     margin-bottom: 40px;
     background: #fff;
     border-radius: 8px;
-    padding: 20px;
+    padding: 20px 100px;
     width: 100%;
     max-width: calc(var(--content-max-width) + (var(--content-max-width) * 0.2));
     height: calc(100vh - 110px);
@@ -547,9 +551,15 @@ code {
     font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
     text-align: justify !important;
     font-size: 20px !important;
-    padding-left: 100px !important;
-    padding-right: 100px !important;
+    /* padding-left: 100px !important; */
+    /* padding-right: 100px !important; */
     padding-bottom: 50px !important;
+}
+
+.popup-box img {
+    display: block;
+    max-width: 95% !important;
+    height: auto;
 }
 
 .popup-close-wrapper {
@@ -562,18 +572,30 @@ code {
 /* Close Button */
 .popup-close {
     position: fixed;
-    background: #ccc;
+    background: none;
     border: none;
     border-radius: 50%;
-    width: 25px;
-    height: 25px;
-    font-size: 18px;
+    width: 45px;
+    height: 45px;
+    /* font-size: 18px; */
     /* z-index: 2001; */
     cursor: pointer;
 }
 
-.popup-close:hover {
-    background: #aaa;
+.popup-symbol {
+    width: 35px;
+    height: 35px;
+    display: block;
+    margin: auto;
+    fill: #ccc;
+}
+
+.popup-symbol:hover {
+    fill: var(--hnn-violet);
+}
+
+body.dark-mode .popup-symbol:hover {
+    fill: var(--light-purple);
 }
 
 /* 
@@ -876,6 +898,12 @@ body.dark-mode #logo-subtitle img {
 }
 
 body.dark-mode .logo-container {
+    background-color:#fff;
+    border: 3px solid var(--light-gray);
+    border-radius: 6px
+}
+
+body.dark-mode .popup-box img {
     background-color:#fff;
     border: 3px solid var(--light-gray);
     border-radius: 6px
